--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "neon-drizzle-guide",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "db:generate": "drizzle-kit generate --dialect=postgresql --schema=src/schema.ts --out=./drizzle"
   },
   "dependencies": {
     "@hono/node-server": "^1.12.0",
