Run the migration

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "neon-drizzle-guide",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "db:generate": "drizzle-kit generate --dialect=postgresql --schema=src/schema.ts --out=./drizzle"
+    "db:generate": "drizzle-kit generate --dialect=postgresql --schema=src/schema.ts --out=./drizzle",
+    "db:migrate": "tsx ./src/migrate.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.12.0",
